reutilizacion de componente

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <mostrar-datos :listar='listar' :valortipo='valortipo'></mostrar-datos>
         <hr>
         <mostrar-datos :listar='listar2' :valortipo='valortipo2'></mostrar-datos>
+        <hr>
+        <mostrar-datos :listar='listar3' :valortipo='valortipo3'></mostrar-datos>
       </v-container>
 
 
